2005-04-11  Erik Hjortsberg  <erik@katastrof.nu>

	* Require eris 1.3.4 because of changes to the Connection API.
	* Use binreloc for relocatable binaries.

2005-04-09  Erik Hjortsberg  <erik@katastrof.nu>

	* Modified connect code to fit with changes in eris.

2005-03-31  Erik Hjortsberg  <erik@katastrof.nu>

	* Fixed a bug which resulted in the starting block not being added to the list of attached blocks, and thus not being saved.

2005-03-31  Erik Hjortsberg  <erik@katastrof.nu>

	* Added columns from building_elements

2005-03-31  Erik Hjortsberg  <erik@katastrof.nu>

	* Use the S_LOG* macros.
	* Name the window "Ember"
	* Commented out the sound test where it tries to open /dev/dsp since that made Ember lock up completely on my box when something else was accessing the sound device.

2005-03-31  Erik Hjortsberg  <erik@katastrof.nu>

	* Fixes to static build. (though I can't really get it to work)

2005-03-31  Erik Hjortsberg  <erik@katastrof.nu>

	* save screen shots to ~/.ember/screenshots
	* Use the S_LOG* macros.
	

2005-03-31  Erik Hjortsberg  <erik@katastrof.nu>

	* Added a reference in Model to the ModelDefinition used
	* Added datatype and parsing of Sounds attached to an Action.
	* Use the S_LOG* macros.

2005-03-31  Erik Hjortsberg  <erik@katastrof.nu>

	* added modeldefs for columns and walls from munin
	* fixed paths for some models

2005-03-30  Erik Hjortsberg  <erik@katastrof.nu>

	* fixed the names of some materials and changed to low res textures

2005-03-30  Erik Hjortsberg  <erik@katastrof.nu>

	* Started to add columns, and fixed a dist build bug in the Makefile.

2005-03-30  Erik Hjortsberg  <erik@katastrof.nu>

	* Added ability to remove building blocks and to create new construction from scratch.

2005-03-30  Erik Hjortsberg  <erik@katastrof.nu>

	* Don't forget to copy .skeleton files.

2005-03-30  Erik Hjortsberg  <erik@katastrof.nu>

	* Use the low res grass texture by default.

2005-03-30  Erik Hjortsberg  <erik@katastrof.nu>
