@@ -1,5 +1,10 @@
 2005-04-11  Erik Hjortsberg  <erik@katastrof.nu>
 
+	* removed unecessary include from GUIManager.h
+	* add binreloc support to EmberOgre.cpp
+
+2005-04-11  Erik Hjortsberg  <erik@katastrof.nu>
+
 	* Require eris 1.3.4 because of changes to the Connection API.
 	* Use binreloc for relocatable binaries.
 
